# dmi-homeassistant

./: .releaserc.json  CHANGELOG.md  LICENSE  README.md  hacs.json  pyproject.toml
.github/scripts/: bump_version.py
.github/workflows/: release.yml  test.yml
custom_components/dmi/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json  weather.py
custom_components/dmi/translations/: da.json
tests/: __init__.py  conftest.py  test_api.py  test_config_flow.py  test_coordinator.py  test_init.py  test_sensor.py  test_weather.py
